--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,31 +1,33 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.calc-main {
+  background-color: #0f1136;
+  height: 100%;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.calc-display {
+  background-color: #0f1136;
+  padding: 55px 15px 20px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
 
-  color: #8c8c8c;
 
+ion-input {
+  color: snow;
+  font-size: 47px;
+}
+
+ion-col {
+  padding: 0;
   margin: 0;
+  text-align: center;
 }
 
-#container a {
-  text-decoration: none;
+ion-button {
+  height: 50px;
+  width: 50px;
+  border-radius: 50;
+  font-size: 22px;
 }
 
-ion-content ion-toolbar {
-  --background: translucent;
+.double-width {
+  width: 86%;
 }
